--- a/client/src/components/Jumbotron/style.css
+++ b/client/src/components/Jumbotron/style.css
@@ -1,9 +1,4 @@
-.jumbotron{
-    width: 100%;
-    height: 50px;
-    clear: both;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    /* background-color: rgb(159, 187, 224); */
+#jumbotron {
+    background-color: #219ebc;
+    color: white
 }
