--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,4 +81,15 @@
     to { transform: rotate(360deg); }
   }
   
+  .remove {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: -10px;
+    right: 5px;
+    cursor: pointer;
+  }
   
+  .remove:hover {
+    color: black;
+  }
