--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@
   }
   
   .App-header {
-    background-color: #222;
+    background-color: rgb(34, 34, 34);
     height: 150px;
     padding: 20px;
     color: white;
@@ -79,6 +79,27 @@
   @keyframes App-logo-spin {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
+  }
+
+  .bubble{
+    background-color: lightgray!important;
+    border-color: lightgray!important;
+  }
+
+  .add{
+    margin-top: 20px;
+  }
+
+  .jumbotron-home{
+    background-color: lightskyblue!important;
+    color: white!important;
+    font-size: 40px;
+  }
+
+  .bubble-board-jumbo{
+    background-color: rgb(209, 160, 221)!important;
+    color: white!important;
+    font-size: 40px;
   }
   
   
