Arrow effect added to board buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,23 +81,54 @@
     to { transform: rotate(360deg); }
   }
 
-  .bubble{
-    background-color: lightgray!important;
-    border-color: lightgray!important;
+  .bubble {
+    border-radius: 4px;
+    background-color: #00040c!important;
+    border-color: black!important;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
   }
-
-  .add{
-    margin-top: 20px;
+  
+  .bubble span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .bubble span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .bubble:hover span {
+    padding-right: 25px;
+  }
+  
+  .bubble:hover span:after {
+    opacity: 1;
+    right: 0;
   }
 
   .jumbotron-home{
-    background-color: lightskyblue!important;
+    background-color: rgb(155, 209, 243)!important;
     color: white!important;
     font-size: 40px;
   }
 
   .bubble-board-jumbo{
-    background-color: rgb(209, 160, 221)!important;
+    background-color: rgb(219, 189, 226)!important;
     color: white!important;
     font-size: 40px;
   }
